--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "crypto-browserify": "^3.12.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
